# neat-starter

./: .eleventy.js  .gitignore  README.md  README2.md  Taskfile.yaml  devbox.json  mkdocs.yaml  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  versions.json
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/disclaimer/: index.html
1.0.1/: 404.html  index.html  sitemap.xml
1.0.1/disclaimer/: index.html
1.0.2/: 404.html  index.html  sitemap.xml
1.0.2/disclaimer/: index.html
1.0.3/: 404.html  index.html  sitemap.xml
1.0.3/disclaimer/: index.html
2.0.0/: 404.html  index.html  sitemap.xml
2.0.0/disclaimer/: index.html
2.0.1/: 404.html  index.html  sitemap.xml
2.0.1/disclaimer/: index.html
2.0.2/: 404.html  index.html  sitemap.xml
2.0.2/disclaimer/: index.html
2.0.3/: 404.html  index.html  sitemap.xml
2.0.3/disclaimer/: index.html
2.0.3/search/: search_index.json
2.0.4/: 404.html  index.html  sitemap.xml
2.0.4/disclaimer/: index.html
2.0.4/search/: search_index.json
2.1.0/: 404.html  index.html  sitemap.xml
2.1.0/disclaimer/: index.html
2.1.1/: 404.html  index.html  sitemap.xml
2.1.1/disclaimer/: index.html
docs/: disclaimer.md
docs/0-quickstart/: 0-prerequisites.md  1-getting-started.md
docs/1-architecture/: 0-overview.md
docs/2-project/: 0-topic1.md
docs/3-troubleshooting/: 0-overview.md  2-problem2.md
docs/4-about/: 0-about.md
latest/: 404.html  index.html
latest/disclaimer/: index.html
src/: index.html
src/_data/: categories.yaml  homepage.yaml  navigation.yaml  quicklinks.yaml  settings.yaml
(+194 files in other folders)
